[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/WFpanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/Title.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/small_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://scenes/2DUI/PlayerSelect.gd" type="Script" id=5]
[ext_resource path="res://packs/waypoints/trappist-1/graphics/HyperSleepChamber.glb" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Show"

[node name="PlayerSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
theme = ExtResource( 2 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 2732, 1536 )
size_override_stretch = true
own_world = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="ViewportContainer/Viewport"]
transform = Transform( 1, 0, 0, 0, 0.980676, 0.195638, 0, -0.195638, 0.980676, 0, 3.76018, 7.87148 )

[node name="HyperSleepChamber" parent="ViewportContainer/Viewport" instance=ExtResource( 6 )]

[node name="WFpanel" parent="." instance=ExtResource( 1 )]
anchor_left = -0.0175695
anchor_top = -0.0182292
anchor_right = 1.01757
anchor_bottom = 1.03516
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 1407.32, 787.64 )
border_color = Color( 1, 0.654902, 0, 1 )

[node name="fullbox" type="Control" parent="WFpanel"]
margin_right = 2828.0
margin_bottom = 1618.0
grow_horizontal = 2
grow_vertical = 2
rect_clip_content = true

[node name="Title" type="Label" parent="WFpanel/fullbox"]
anchor_left = 0.982
anchor_top = 0.963
anchor_right = 0.982
anchor_bottom = 0.963
margin_left = -528.548
margin_top = -61.0671
margin_right = -0.548096
margin_bottom = -0.0670776
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = ExtResource( 3 )
text = "Crew Select"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="WFpanel/fullbox"]
anchor_left = 0.0254597
anchor_top = 0.0828183
anchor_right = 0.976662
anchor_bottom = 0.901112
margin_right = 0.00012207
margin_bottom = -1.99994
grow_horizontal = 2
grow_vertical = 2
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="WFpanel/fullbox"]
anchor_left = 0.0282885
anchor_top = 0.0321384
anchor_right = 0.0983027
anchor_bottom = 0.0741656
text = "a2fadra"
uppercase = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="hint" type="Label" parent="WFpanel/fullbox"]
anchor_left = 0.0763791
anchor_top = 0.911001
anchor_right = 0.0820368
anchor_bottom = 0.953028
grow_vertical = 2
custom_fonts/font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.2

[node name="holdcount" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Show = SubResource( 1 )

[connection signal="resized" from="." to="." method="_on_PlayerSelect_resized"]
[connection signal="visibility_changed" from="." to="." method="_on_PlayerSelect_visibility_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="holdcount" to="." method="_on_holdcount_timeout"]
